<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fontFamily="@font/ridibatang"
        android:orientation="vertical"
        android:padding="30sp">

        <TextView
            android:id="@+id/writeNum1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FDFB94"
            android:fontFamily="@font/ridibatang"
            android:text="@string/writeNum1" />

        <EditText
            android:id="@+id/readNum1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:fontFamily="@font/ridibatang"
            android:hint="@string/questHint" />

        <TextView
            android:id="@+id/writeNum2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:background="#FDFB94"
            android:fontFamily="@font/ridibatang"
            android:text="@string/writeNum2"
            android:visibility="gone" />

        <EditText
            android:id="@+id/readNum2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:fontFamily="@font/ridibatang"
            android:hint="@string/questHint"
            android:visibility="gone" />

        <TextView
            android:id="@+id/writeNum3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:background="#FDFB94"
            android:fontFamily="@font/ridibatang"
            android:text="@string/writeNum3"
            android:visibility="gone" />

        <EditText
            android:id="@+id/readNum3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:fontFamily="@font/ridibatang"
            android:hint="@string/questHint"
            android:visibility="gone" />

        <TextView
            android:id="@+id/writeNum4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:background="#FDFB94"
            android:fontFamily="@font/ridibatang"
            android:text="@string/writeNum4"
            android:visibility="gone" />

        <EditText
            android:id="@+id/readNum4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:fontFamily="@font/ridibatang"
            android:hint="@string/questHint"
            android:visibility="gone" />

        <TextView
            android:id="@+id/writeNum5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:background="#FDFB94"
            android:fontFamily="@font/ridibatang"
            android:text="@string/writeNum5"
            android:visibility="gone" />

        <EditText
            android:id="@+id/readNum5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:fontFamily="@font/ridibatang"
            android:hint="@string/questHint"
            android:visibility="gone" />

        <Button
            android:id="@+id/finishBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/ridibatang"
            android:text="@string/finishWriting" />

    </LinearLayout>

</ScrollView>